--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1757,7 +1757,7 @@ ul {
 /* Estilos para pantallas de 360px o menos */
 @media (max-width: 360px) {
   .clients2 {
-    background-image: url(../img/fondo-clientes.png);
+    background-image: url(../img/clientes-mobile.png);
     padding-bottom: 30px;
   }
 
