--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1147,6 +1147,21 @@ ul {
     transform: scale(0.0);
   }
 
+  .pricing .box {
+    margin-right: 10px
+    padding: 80px 20px;
+    background: #F8F5EC;
+    text-align: center;
+    box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);
+    border-radius: 8px;
+    position: relative;
+    overflow: hidden;
+    transition: 0.3s;
+    height: 639.438px;
+    margin-bottom: 20px
+  }
+  
+
 }
 
 /*--------------------------------------------------------------
